--- a/es/es.html
+++ b/es/es.html
@@ -111,7 +111,7 @@
 
 <div class="index_banner">
   <div class="container index_banner_content">
-    <h1>Estamos todos juntos en esto<br> #covid-19</h1>
+    <h1>Comienza el 2021 en el camino <br> correcto con Workep</h1>
     <p>La herramienta de colaboración remota entre empresas que es rápida, fácil de usar y totalmente integrada con G Suite</p>
     <div class="joinworkep_btns">
         <ul>
@@ -127,7 +127,7 @@
         </ul>
       </div>
   </div>
-  <img src="../images/main_pic@3x.png" alt="Workep totalmente integrado con G-suite" style="max-width: 50%">
+  <img src="../images/january-2.png" alt="Workep totalmente integrado con G-suite" style="max-width: 50%">
 </div>
 
 <div class="video_covid_container">
