--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
 
 <div class="index_banner">
   <div class="container index_banner_content">
-    <h1>We are all in this together</h1>
-    <p>A cross-enterprise collaboration tool that is fast, easy to use and fully integrated within G Suite.</p>
+    <h1>Kick-start 2021 the right way <br>with Workep</h1>
+    <p>A cross-enterprise collaboration tool that is fast, easy to use <br>
+    and fully integrated within G Suite.</p>
     <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>TRY FOR FREE WITH GOOGLE</span></a></li>
@@ -121,7 +122,7 @@
         </ul>
       </div>
   </div>
-  <img src="images/main_pic@3x.png" alt="Workep colaboration software" style="max-width: 45%">
+  <img src="images/january-2.png" alt="Workep colaboration software" style="max-width: 45%">
 </div>
 
 <div class="video_covid_container">
@@ -167,28 +168,6 @@
 
   </div>
 
-        <!-- <div class="collaboration_list collaboration_list_index">
-          <ul>
-            <li>
-              <div class="collaboration_person opbox pmguy" data-src=".pmguy">
-                <span class="collaboration_person_title">#Project Manager</span>
-                <figure><img src="images/cameron.png" alt="workep project manager"></figure>
-              </div>
-            </li>
-            <li>
-              <div class="collaboration_person opbox tmgirl" data-src=".tmgirl">
-                <span class="collaboration_person_title">#TeamMember</span>
-                <figure><img src="images/caroline.png" alt="workep team member"></figure>
-              </div>
-            </li>
-            <li>
-              <div class="collaboration_person opbox egguy" data-src=".egguy">
-                <span class="collaboration_person_title">#ExternalGuest</span>
-                <figure><img src="images/chester.png" alt="workep external guest"></figure>
-              </div>
-            </li>
-          </ul>
-        </div> -->
 
         <div class="collaboration_allim_single">
 
