update banner covid & Landing
Send facebook & Google landing pages and update covid banner.

--- a/projects-made-easy-g.html
+++ b/projects-made-easy-g.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="robots" content="noindex" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Google indicator for language  -->
@@ -70,8 +71,8 @@
 
       <!-- Covid-19 End -->
 
-      <div class="container">
-        <nav class="navbar navbar-expand-lg">
+       <div class="container">
+        <!--<nav class="navbar navbar-expand-lg">
          <div class="logo">
            <a href="https://workep.com/"><img src="images/logo.png" alt="workep logo"></a>
          </div>
@@ -97,7 +98,7 @@
              <li class="loginbtn"><a href="https://app.workep.com/login">LOGIN</a></li>
             </ul>
           </div>
-        </nav>
+        </nav>-->
       </div>
 </header>
 
@@ -110,7 +111,7 @@
     and fully integrated within G Suite.</p>
     <div class="joinworkep_btns">
         <ul>
-          <li><a href="https://app.workep.com/login" class="signupgoogle"><span>TRY FOR FREE WITH GOOGLE</span></a></li>
+          <li><a href="app.workep.com?utm_source=google&utm_medium=cpc&utm_campaign=january_campaign" class="signupgoogle"><span>TRY FOR FREE WITH GOOGLE</span></a></li>
           <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -123,12 +124,6 @@
       </div>
   </div>
   <img src="images/january-2.png" alt="Workep colaboration software" style="max-width: 45%">
-</div>
-
-<div class="video_covid_container">
-  <div class="video_covid_wrapper" style="text-align: center; width:800px; height:450px;">
-    <iframe style="border-radius:10px; width:800px; height:450px;" height="501" src="https://www.youtube.com/embed/hiF4fAh4HAU?rel=0&vq=hd1080" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
 </div>
 
 <div class="index_made_forgoogle common_gap">
@@ -151,7 +146,7 @@
             <div class="madeforgoogle_banner_box">
              <p>With a single click you can turn the entire G Suite into a more powerful collaboration platform. Integrates Gmail, Drive, Calendar, Google docs, Hangouts, Contacts and Google Cloud. </p>
             </div>
-            <a href="https://workep.com/made-for-google.html" class="starttrial_btn">How does it work?</a>
+
           </div>
         </div>
       </div>
@@ -495,59 +490,6 @@
       </div>
   </div>
 </div>
-
-<div class="marketplace_sec common_gap marketplace_sec_index">
-    <div class="container">
-      <div class="section_title">
-        <h2>Watch Workep in Action</h2>
-        <!-- <p>See how <b>Umbrella</b> team became more productive by using Workep</p> -->
-      </div>
-      <div class="marketplace_sec_in">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="marketplace_video wistia_responsive_wrapper">
-              <!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7DHmD2YM1_M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
-
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/7DHmD2YM1_M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              <!-- <span class="wistia_embed wistia_async_anuee2yism popover=true popoverAnimateThumbnail=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span> -->
-              <!-- <a href="#url" class="marketplace_video_btn"><img src="images/play-button.svg" alt="Market place google"></a> -->
-            </div>
-          </div>
-
-
-          <div class="col-md-6">
-            <div class="marketplace_rt_content">
-              <span class="marketplace_tag">
-                <img src="images/group-9.png" alt="workep google cloud partners">
-                Google Cloud Partners
-              </span>
-              <h4 class="title_txt">#1 in the Google Marketplace</h4>
-             <!--  <span class="chk_review"><a href="#url">Check our reviews</a></span> -->
-              <div class="clientreview_text">
-                <p>Intuitive, flowless, and responsive. We enjoy the 3 display modes and total integrations with Google Suite calendar, Drive and Docs. We work with creatives and now we can review their work on the spot.
-                  We look forward for more tools and tweaks. Keep it up!</p>
-              </div>
-              <div class="client_proftxt">
-                <span class="client_profLft">
-                  <img src="images/chat_bot.png" alt="Workep Chatbot">
-                </span>
-                <span class="client_profrt">
-                  <span class="client_ratings">
-                    <img src="images/star.png" alt="Workep stars">
-                  </span>
-                  <span class="client_name">Diego Cardenas</span>
-                </span>
-
-              </div>
-
-              <a href="https://app.workep.com/login" class="free_trialbtn">Try for free</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
 <div class="lovedby_thousand common_gap lovedby_thousand_indexbg">
     <div class="container">
       <div class="section_title">
@@ -595,26 +537,6 @@
        <img src="images/comp13.png" alt="WIX supports workep">
      </div>
    </div>
-</div>
-<div class="mangmnt_prdctivty common_gap">
-  <div class="container">
-      <div class="section_title">
-        <h2>Top Content on Project Management and Productivity</h2>
-        <p>Our blog is constantly updated to bring you high value content on project management, <br>productivity and how to make the most out of Workep</p>
-      </div>
-      <div class="mangmnt_prdctivty_slider" id="feeds">
-
-
-        <!-- <div class="mangmnt_prdctivty_box">
-          <figure>
-            <a href="#url"><img src="images/productivity_im1.png" alt="Productiviy Workep"></a>
-          </figure>
-          <a href="#url" class="seemorebtn">See more</a>
-        </div> -->
-
-
-      </div>
-  </div>
 </div>
 <div class="addi_resouce common_gap">
   <div class="container">
@@ -676,7 +598,7 @@
       </div>
       <div class="joinworkep_btns">
         <ul>
-          <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
+          <li><a href="app.workep.com?utm_source=google&utm_medium=cpc&utm_campaign=january_campaign" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
           <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
