--- a/es/precios.html
+++ b/es/precios.html
@@ -137,7 +137,7 @@
                 <div class="pricing_box lite_plan">
                   <div class="pricing_boxT">
                     <h4>Lite</h4>
-                    <p>Básico con usuarios y características limitadas</p>
+                    <p>Básico con asientos y características limitadas</p>
                   </div>
 
                   <div class="pricing_boxB">
@@ -159,7 +159,7 @@
 
                   <div class="pricing_boxB">
                     <span class="pricetxt">
-                      <strong>$9.99</strong> por usuario / por mes
+                      <strong>$9.99</strong> por asiento / por mes
                     </span>
                     <span class="terms_notes">* Facturado anualmente o $11.99 facturado mensualmente</span>
                   </div>
