--- a/pricing.html
+++ b/pricing.html
@@ -134,7 +134,7 @@
                 <div class="pricing_box lite_plan">
                   <div class="pricing_boxT">
                     <h4>Lite</h4>
-                    <p>Basic with limited users and Features</p>
+                    <p>Basic with limited seats and Features</p>
                   </div>
 
                   <div class="pricing_boxB">
@@ -157,7 +157,7 @@
 
                   <div class="pricing_boxB">
                     <span class="pricetxt">
-                      <strong>$9.99</strong> Per user / Per month
+                      <strong>$9.99</strong> Per seat / Per month
                     </span>
                     <span class="terms_notes">*Billed annually or $11.99 billed monthly</span>
                   </div>
