--- a/es/precios.html
+++ b/es/precios.html
@@ -81,7 +81,7 @@
                 <a href="https://blog.workep.com/es/" target="_blank">RECURSOS</a>
                 <span class="clickD"></span>
                 <ul class="sub-menu">
-                  <li><a href="https://docs.google.com/presentation/d/1caeMup8kqHDKAfbapdWlN8Krdd6k4azUho1AHv2wGA8/present?slide=id.p" target="_blank">GUIA DE USUARIO</a></li>
+                  <li><a href="https://docs.google.com/presentation/d/1rb3d_48o9ptp3aRGim_zN0D-HKSJAI9momQuwYsIrSg/edit?usp=sharing" target="_blank">GUIA DE USUARIO</a></li>
                     <li><a href="https://blog.workep.com/es/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">CENTRO DE AYUDA</a></li>
                 </ul>
