update Booka a Demo
update Booka a Demo

--- a/es/producto.html
+++ b/es/producto.html
@@ -77,14 +77,14 @@
             <li><a href="https://workep.com/es/producto.html">PRODUCTO</a></li>
              <li><a href="https://workep.com/es/hecho-para-google.html">GESTIÓN DE PROYECTOS GOOGLE</a></li>
              <li><a href="https://workep.com/es/precios.html">PRECIOS</a></li>
-
+             <li><a href="https://projectmanagement.workep.com/demo">AGENDA UN DEMO</a></li>   
              <li class="menu-item-has-children">
                 <a href="https://blog.workep.com/es/" target="_blank">RECURSOS</a>
                 <span class="clickD"></span>
                 <ul class="sub-menu">
                     <li><a href="https://docs.google.com/presentation/d/1rb3d_48o9ptp3aRGim_zN0D-HKSJAI9momQuwYsIrSg/edit?usp=sharing" target="_blank">GUIA DE USUARIO</a></li>
                     <li><a href="https://blog.workep.com/es/" target="_blank">BLOG</a></li>
-                    <li><a href="https://help.workep.com/" target="_blank">CENTRO DE AYUDA</a></li>
+                    <li><a href="https://help.workep.com/en/collections/278655-espanol" target="_blank">CENTRO DE AYUDA</a></li>
                 </ul>
               </li>
 
@@ -109,6 +109,7 @@
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
+          <li><a href="https://projectmanagement.workep.com/demo" class="book-demo"><span>AGENDA UN DEMO</span></a></li>
           <!--<li><a href="#url" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -1011,6 +1012,7 @@ hitos específicos.</P>
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
+          <li><a href="https://projectmanagement.workep.com/demo" class="book-demo"><span>AGENDA UN DEMO</span></a></li>
           <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>MARKETPLACE DE G SUITE <br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
