--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <li><a href="https://workep.com/product.html">PRODUCT</a></li>
              <li><a href="https://workep.com/made-for-google.html">GOOGLE PROJECT MANAGEMENT</a></li>
              <li><a href="https://workep.com/pricing.html">PRICING</a></li>
+             <li><a href="https://projectmanagement.workep.com/contact-sales">BOOK A DEMO</a></li>
           
              <li class="menu-item-has-children">
                 <a href="https://blog.workep.com/" target="_blank">RESOURCES</a>
@@ -91,7 +92,7 @@
                 <ul class="sub-menu">
                     <li><a href="https://docs.google.com/presentation/d/12OPs8ZAZ_m5WIX82-obhGP4He2RKttbsfXPEMFbbusg/present?slide=id.p" target="_blank">USER'S GUIDE</a></li>
                     <li><a href="https://blog.workep.com/" target="_blank">BLOG</a></li>
-                    <li><a href="https://help.workep.com/" target="_blank">HELP CENTER</a></li>
+                    <li><a href="https://help.workep.com/en/collections/2777718-english" target="_blank">HELP CENTER</a></li>
                 </ul>
               </li>
              <li class="loginbtn"><a href="https://app.workep.com/login">LOGIN</a></li>
@@ -111,6 +112,7 @@
     <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>TRY FOR FREE WITH GOOGLE</span></a></li>
+          <li><a href="https://projectmanagement.workep.com/request-demo" class="book-demo"><span>WATCH A DEMO</span></a></li>
           <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -124,13 +126,6 @@
   </div>
   <img src="images/january-2.png" alt="Workep colaboration software" style="max-width: 45%">
 </div>
-
-<div class="video_covid_container">
-  <div class="video_covid_wrapper" style="text-align: center; width:800px; height:450px;">
-    <iframe style="border-radius:10px; width:800px; height:450px;" height="501" src="https://www.youtube.com/embed/hiF4fAh4HAU?rel=0&vq=hd1080" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
-</div>
-
 <div class="index_made_forgoogle common_gap">
   <div class="container">
     <div class="section_title">
@@ -677,6 +672,7 @@
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
+          <li><a href="https://projectmanagement.workep.com/request-demo"  class="book-demo"><span>WATCH A DEMO</span></a></li>
           <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
