--- a/es/es.html
+++ b/es/es.html
@@ -85,7 +85,7 @@
             <li><a href="https://workep.com/es/producto.html">PRODUCTO</a></li>
              <li><a href="https://workep.com/es/hecho-para-google.html">GESTIÓN DE PROYECTOS GOOGLE</a></li>
              <li><a href="https://workep.com/es/precios.html">PRECIOS</a></li>
-             <!--<li><a href="https://workep.com/es/socios.html" target="_blank">SOCIOS</a></li>-->
+             <li><a href="https://projectmanagement.workep.com/demo">AGENDA UN DEMO</a></li>
 
              <li class="menu-item-has-children">
                 <a href="https://blog.workep.com/es/" target="_blank">RECURSOS</a>
@@ -93,7 +93,7 @@
                 <ul class="sub-menu">
                   <li><a href="https://docs.google.com/presentation/d/1rb3d_48o9ptp3aRGim_zN0D-HKSJAI9momQuwYsIrSg/edit?usp=sharing" target="_blank">GUIA DE USUARIO</a></li>
                     <li><a href="https://blog.workep.com/es/" target="_blank">BLOG</a></li>
-                    <li><a href="https://help.workep.com/" target="_blank">CENTRO DE AYUDA</a></li>
+                    <li><a href="https://help.workep.com/en/collections/278655-espanol" target="_blank">CENTRO DE AYUDA</a></li>
                 </ul>
               </li>
 
@@ -116,6 +116,7 @@
     <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE GRATIS CON GOOGLE</span></a></li>
+          <li><a href="https://projectmanagement.workep.com/demo" class="book-demo"><span>AGENDA UN DEMO</span></a></li>
           <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -703,6 +704,7 @@
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
+          <li><a href="https://projectmanagement.workep.com/demo" class="book-demo"><span>AGENDA UN DEMO</span></a></li>
           <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
