--- a/product.html
+++ b/product.html
@@ -77,13 +77,14 @@ and fully integrated within G Suite. clic and take a look.">
                 <li><a href="https://workep.com/product.html">PRODUCT</a></li>
                  <li><a href="https://workep.com/made-for-google.html">GOOGLE PROJECT MANAGEMENT</a></li>
                  <li><a href="https://workep.com/pricing.html">PRICING</a></li>
+                 <li><a href="https://projectmanagement.workep.com/contact-sales">BOOK A DEMO</a></li>
                  <li class="menu-item-has-children">
                     <a href="https://blog.workep.com/" target="_blank">RESOURCES</a>
                     <span class="clickD"></span>
                     <ul class="sub-menu">
                       <li><a href="https://docs.google.com/presentation/d/12OPs8ZAZ_m5WIX82-obhGP4He2RKttbsfXPEMFbbusg/present?slide=id.p" target="_blank">USER'S GUIDE</a></li>
                         <li><a href="https://blog.workep.com/" target="_blank">BLOG</a></li>
-                        <li><a href="https://help.workep.com/" target="_blank">HELP CENTER</a></li>
+                        <li><a href="https://help.workep.com/en/collections/2777718-english" target="_blank">HELP CENTER</a></li>
                     </ul>
                   </li>
 
@@ -108,6 +109,7 @@ and fully integrated within G Suite.</p>
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
+          <li><a href="https://projectmanagement.workep.com/request-demo"  class="book-demo"><span>WATCH A DEMO</span></a></li>
           <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -1041,6 +1043,7 @@ rest of the project..</P>
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
+          <li><a href="https://projectmanagement.workep.com/request-demo"  class="book-demo"><span>WATCH A DEMO</span></a></li>
           <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
