--- a/es/precios.html
+++ b/es/precios.html
@@ -82,7 +82,7 @@
                 <a href="https://blog.workep.com/es/" target="_blank">RECURSOS</a>
                 <span class="clickD"></span>
                 <ul class="sub-menu">
-                  <li><a href="https://docs.google.com/presentation/d/1rb3d_48o9ptp3aRGim_zN0D-HKSJAI9momQuwYsIrSg/edit?usp=sharing" target="_blank">GUIA DE USUARIO</a></li>
+                  <li><a href="https://docs.google.com/presentation/d/1rb3d_48o9ptp3aRGim_zN0D-HKSJAI9momQuwYsIrSg/present?slide=id.p" target="_blank">GUIA DE USUARIO</a></li>
                     <li><a href="https://blog.workep.com/es/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/en/collections/278655-espanol" target="_blank">CENTRO DE AYUDA</a></li>
                 </ul>
