--- a/It-teams.html
+++ b/It-teams.html
@@ -1,4 +1,4 @@
-  <!doctype html>
+<!doctype html>
 <html lang="en">
   <head>	
     <!-- Required meta tags -->
@@ -38,7 +38,7 @@
       <div class="row">
         <div class="col-md-5 partner_banner_lft">
           <div class="banner_seclft">
-            <img src="images/web-hero-marketing.png" alt="Banner de Marketing">
+            <img src="images/web-hero-It.png" alt="Banner de Marketing">
            
           </div>
         </div>
@@ -81,10 +81,8 @@
                   <img src="images/web-hero-marketing-2.png">
               </div>
               <div class="col-lg-5 marketing_content_blocks_txt">
-                <h2><strong>All files</strong> All files in the same place.
-                </h2>
-                <p>Your files will be located in the same spot. Share documents and collaborate, this is a team work application
-                </p>
+                <h2><strong>All files</strong> in the same ApplicationBudget Tracker</h2>
+                <p>All your projects files in the same place, share documents, and collaborate, team work in an application.</p>
                 <figure class="marketing_content_blocks_smallim">
                 </figure>
               </div>
@@ -99,7 +97,7 @@
               </div>
               <div class="col-lg-5 marketing_content_blocks_txt">
                 <h2>Strong Collabooration and<strong> Task Manager</strong></h2>
-                <p>Manage your tasks, subtasks and assignments all in one place, with incredible feautures like Time Tracker, Expense Eracker and Voice Notes               </p>
+                <p>Manage your tasks and assignments and subtasks, in one place, expenses, time per task and more.</p>
                 <figure class="marketing_content_blocks_smallim">
                   <img src="images/gg3.png" alt="">
                 </figure>
