--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KSFSSWG');</script>
     <!-- End Google Tag Manager -->
-
-    <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="The fastest project management experience for cross-enterprise collaboration, G Suite integration, Gantt Charts, Time Tracker, Budget and more. ">
@@ -54,13 +52,11 @@
 
   </head>
   <body class="indexpagebody">
-
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KSFSSWG"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-
-<header class="main_head">
+    <header class="main_head">
 
       <!-- Top banner Jose -->
       <!--<div class="covid-banner">
@@ -151,9 +147,57 @@
         </div>
       </div>
   </div>
-
 </div>
-
+<div class="all_teams_sec common_gap">
+  <div class="container">
+      <div class="section_title">
+        <h2>#1 Collaborative Project Management for:</h2>
+      </div>
+      <div class="row all_teams_list">
+        <div class="col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="0.6s">
+          <div class="all_teams_sizebox">
+             <div class="all_teams_sizeboxR">
+              <img src="images/team2.png" alt="workep consulting team">
+              <span class="cloud_im"><img src="images/cloud.svg" alt="Workep Cloud"></span>
+            </div>
+            <div class="all_teams_sizeboxL">
+              <h4>Consulting companies</h4>
+              <h5>Improve the relationship with your customers.</h5>
+              <!--<a href="https://workep.com/consulting.html">View More</a>-->
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="0.6s">
+          <div class="all_teams_sizebox">
+            <div class="all_teams_sizeboxR">
+              <img src="images/team1.png" alt="workep marketing team">
+              <span class="cloud_im"><img src="images/cloud.svg" alt="Workep cloud"></span>
+            </div>
+            <div class="all_teams_sizeboxL">
+              <h4>Marketing Teams</h4>
+              <h5>Constant communication with your
+              customers to avoid reprocessing.</h5>
+              <a href="https://workep.com/marketing.html">View More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 wow bounceInUp" data-wow-delay="0.4s" data-wow-duration="0.6s">
+          <div class="all_teams_sizebox">
+            <div class="all_teams_sizeboxR">
+              <img src="images/team3.png" alt="workep development team">
+              <span class="cloud_im"><img src="images/cloud.svg" alt="Workep cloud"></span>
+            </div>
+            <div class="all_teams_sizeboxL">
+              <h4>IT Teams</h4>
+              <h5>Deliver high-quality products on time.</h5>
+              <!--<a href="https://workep.com//It-teams.html">View More</a>-->
+            </div>
+          </div>
+        </div>  
+      </div>
+    </div>
+  </div>
+</div>
 <div class="cross_team_home common_gap">
   <div class="container">
       <div class="section_title">
@@ -169,28 +213,6 @@
           <video width="100%" height="auto" autoplay loop muted playsinline>
             <source src="images/gifts/cross-team-collaboration.webm" type="video/webm" />
           </video>
-
-          <!-- <div class="collaboration_allim">
-            <img src="images/proj_mang_allslide.png" alt="Project for google suite">
-          </div>
-          <div class="collaboration_list_index_tabcontent">
-
-              <div class="collaboration_list_index_box opbox pmguy">
-                <div class="team_guest_box">
-                  <img src="images/proj_mang_slide1.jpg" alt="workep gantt chart">
-                </div>
-              </div>
-
-              <div class="collaboration_list_index_box">
-                <div class="team_guest_box team_guest_box1 opbox tmgirl">
-                  <img src="images/proj_mang_slide2.jpg" alt="workep tasks">
-                </div>
-                <div class="team_guest_box team_guest_box2 opbox egguy">
-                  <img src="images/proj_mang_slide3.jpg" alt="workep comments collaboration">
-                </div>
-              </div>
-
-          </div> -->
         </div>
 
 </div>
@@ -421,76 +443,6 @@
         </div>
   </div>
 </div>
-
-<div class="all_teams_sec common_gap">
-  <div class="container">
-      <div class="section_title">
-        <h2>All teams of all sizes</h2>
-        <p>Flexible solution that adapts to every type of team. <br>Learn how Workep can help your team's projects be successful </p>
-      </div>
-      <div class="row all_teams_list">
-        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="0.6s">
-          <div class="all_teams_sizebox">
-            <div class="all_teams_sizeboxR">
-              <img src="images/team1.png" alt="workep marketing team">
-              <span class="cloud_im"><img src="images/cloud.svg" alt="Workep cloud"></span>
-            </div>
-            <div class="all_teams_sizeboxL">
-              <h4>Marketing Teams</h4>
-              <h5>Constant communication with your
-              customers to avoid reprocessing:</h5>
-              <p>Collaborate with your team, customers
-              and contractors in real-time while creating and launching on-time, successful marketing campaigns.</p>
-            </div>
-
-          </div>
-        </div>
-        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="0.6s">
-          <div class="all_teams_sizebox">
-             <div class="all_teams_sizeboxR">
-              <img src="images/team2.png" alt="workep consulting team">
-              <span class="cloud_im"><img src="images/cloud.svg" alt="Workep Cloud"></span>
-            </div>
-            <div class="all_teams_sizeboxL">
-              <h4>Consulting companies</h4>
-              <h5>Improve the relationship with your customers by taking good care of their needs:</h5>
-              <p>Better manage your customers’ workflows, and always know what you need to do in order to meet different project deadlines.</p>
-            </div>
-
-          </div>
-        </div>
-        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.4s" data-wow-duration="0.6s">
-          <div class="all_teams_sizebox">
-            <div class="all_teams_sizeboxR">
-              <img src="images/team3.png" alt="workep development team">
-              <span class="cloud_im"><img src="images/cloud.svg" alt="Workep cloud"></span>
-            </div>
-            <div class="all_teams_sizeboxL">
-              <h4>Development Studios</h4>
-              <h5>Deliver high-quality products on time:</h5>
-              <p>Easily manage and execute software requirements, from design to final delivery, without missing any deadlines.</p>
-            </div>
-
-          </div>
-        </div>
-        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.6s" data-wow-duration="0.6s">
-          <div class="all_teams_sizebox">
-            <div class="all_teams_sizeboxR">
-              <img src="images/team4.png" alt="workep Enterprise team">
-              <span class="cloud_im"><img src="images/cloud.svg" alt="Workep Cloud"></span>
-            </div>
-            <div class="all_teams_sizeboxL">
-              <h4>Enterprise</h4>
-              <h5>Cross-enterprise collaboration among different departments:</h5>
-              <p>Each team uses the tools they need in their day-to-day, according to their specific projects, while collaborating on company-wide projects.</p>
-            </div>
-
-          </div>
-        </div>
-      </div>
-  </div>
-</div>
-
 <div class="marketplace_sec common_gap marketplace_sec_index">
     <div class="container">
       <div class="section_title">
@@ -693,8 +645,7 @@
           <div class="foot1">
             <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt="Logo Workep"></a>
             <p>©2020 Workep,Inc. All rights reserved <br>
-              <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
-            </p>
+          </p>
             <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love"></i> by Workep</span>
           </div>
           <div class="foot2">
