--- a/marketing.html
+++ b/marketing.html
@@ -83,8 +83,7 @@
               <div class="col-lg-5 marketing_content_blocks_txt">
                 <h2><strong>All files</strong> All files in the same place.
                 </h2>
-                <p>Your files will be located in the same spot. Share documents and collaborate, this is a team work application
-                </p>
+                <p>Your files will be located in the same spot. Share documents and collaborate, this is a teamwork application</p>
                 <figure class="marketing_content_blocks_smallim">
                 </figure>
               </div>
@@ -98,8 +97,9 @@
                   <img src="images/web-hero-marketing-3.png">
               </div>
               <div class="col-lg-5 marketing_content_blocks_txt">
-                <h2>Strong Collabooration and<strong> Task Manager</strong></h2>
-                <p>Manage your tasks, subtasks and assignments all in one place, with incredible feautures like Time Tracker, Expense Eracker and Voice Notes               </p>
+                <h2>
+                  Strong Collaboration and <strong>Task Manager</strong></h2>
+                <p>Manage your tasks, Subtasks and assignments all in one place, with incredible features like Time Tracker, Expense Tracker and Voice Notes</p>
                 <figure class="marketing_content_blocks_smallim">
                   <img src="images/gg3.png" alt="">
                 </figure>
