--- a/es/es.html
+++ b/es/es.html
@@ -155,9 +155,56 @@
         </div>
       </div>
   </div>
-
+  <div class="all_teams_sec common_gap">
+    <div class="container">
+        <div class="section_title">
+          <h2> #1 En Gestión colaborativa de proyectos para:</h2>
+        </div>
+        <div class="row all_teams_list">
+          <div class="col-lg-4 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="0.6s">
+            <div class="all_teams_sizebox">
+               <div class="all_teams_sizeboxR">
+                <img src="../images/team2.png" alt="workep consulting team">
+                <span class="cloud_im"><img src="../images/cloud.svg" alt="Workep Cloud"></span>
+              </div>
+              <div class="all_teams_sizeboxL">
+                <h4>Equipos de Consultoría</h4>
+                <h5>Mejora la relación con tus clientes.</h5>
+                <!--<a href="https://workep.com/consulting.html">View More</a>-->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="0.6s">
+            <div class="all_teams_sizebox">
+              <div class="all_teams_sizeboxR">
+                <img src="../images/team1.png" alt="workep marketing team">
+                <span class="cloud_im"><img src="../images/cloud.svg" alt="Workep cloud"></span>
+              </div>
+              <div class="all_teams_sizeboxL">
+                <h4>Equipos de Marketing </h4>
+                <h5>Comunicación constante con tu
+                  clientes para evitar el reprocesos.</h5>
+                <a href="https://workep.com/es/marketing.html">View More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 wow bounceInUp" data-wow-delay="0.4s" data-wow-duration="0.6s">
+            <div class="all_teams_sizebox">
+              <div class="all_teams_sizeboxR">
+                <img src="../images/team3.png" alt="workep development team">
+                <span class="cloud_im"><img src="../images/cloud.svg" alt="Workep cloud"></span>
+              </div>
+              <div class="all_teams_sizeboxL">
+                <h4>Equipos de TI </h4>
+                <h5>Entregue productos de alta calidad a tiempo.</h5>
+                <!--<a href="https://workep.com//It-teams.html">View More</a>-->
+              </div>
+            </div>
+          </div>  
+        </div>
+      </div>
+    </div>
 </div>
-
 <div class="cross_team_home common_gap">
   <div class="container">
       <div class="section_title">
@@ -166,61 +213,13 @@
       </div>
 
   </div>
-
-  <!-- <div class="collaboration_list collaboration_list_index">
-          <ul>
-            <li>
-              <div class="collaboration_person opbox pmguy" data-src=".pmguy">
-                <span class="collaboration_person_title">#GestordeProyectos</span>
-                <figure><img src="../images/cameron.png" alt="workep project manager"></figure>
-              </div>
-            </li>
-            <li>
-              <div class="collaboration_person opbox tmgirl" data-src=".tmgirl">
-                <span class="collaboration_person_title">#MiembrodelEquipo</span>
-                <figure><img src="../images/caroline.png" alt="workep team member"></figure>
-              </div>
-            </li>
-            <li>
-              <div class="collaboration_person opbox egguy" data-src=".egguy">
-                <span class="collaboration_person_title">#UsuarioExterno</span>
-                <figure><img src="../images/chester.png" alt="workep external guest"></figure>
-              </div>
-            </li>
-          </ul>
-        </div> -->
-
   <div class="collaboration_allim_single">
-
     <video width="100%" height="auto" autoplay loop muted playsinline>
       <source src="../images/gifts/cross-team-collaboration.webm" type="video/webm" />
     </video>
-
-
-          <!-- <div class="collaboration_allim">
-            <img src="../images/proj_mang_allslide.png" alt="Workep project software">
-          </div>
-          <div class="collaboration_list_index_tabcontent">
-
-              <div class="collaboration_list_index_box opbox pmguy">
-                <div class="team_guest_box">
-                  <img src="../images/proj_mang_slide1.jpg" alt="workep gantt chart">
-                </div>
-              </div>
-
-              <div class="collaboration_list_index_box">
-                <div class="team_guest_box team_guest_box1 opbox tmgirl">
-                  <img src="../images/proj_mang_slide2.jpg" alt="workep tasks">
-                </div>
-                <div class="team_guest_box team_guest_box2 opbox egguy">
-                  <img src="../images/proj_mang_slide3.jpg" alt="workep comments collaboration">
-                </div>
-              </div>
-
-          </div> -->
-        </div>
-
 </div>
+</div>
+
 
 <div class="foundation_sec common_gap">
   <div class="container">
@@ -448,77 +447,6 @@
         </div>
   </div>
 </div>
-
-
-
-<div class="all_teams_sec common_gap">
-  <div class="container">
-      <div class="section_title">
-        <h2>Equipos de todos los tamaños</h2>
-        <p>Solución flexible que se adapta a cada tipo de equipo.<br>Aprende cómo Workep puede ayudar a que los proyectos de tu equipo tengan éxito</p>
-      </div>
-      <div class="row all_teams_list">
-        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
-          <div class="all_teams_sizebox">
-            <div class="all_teams_sizeboxR">
-              <img src="../images/team1.png" alt="workep marketing team">
-              <span class="cloud_im"><img src="../images/cloud.svg" alt="Workep en la nube"></span>
-            </div>
-            <div class="all_teams_sizeboxL">
-              <h4>Equipos de marketing</h4>
-              <h5>Comunicación constante con tus
-              clientes para evitar reprocesos:</h5>
-              <p>Colabora con tu equipo, clientes y proveedores en tiempo real mientras ejecutas y lanzas campañas de mercadeo exitosas.</p>
-            </div>
-
-          </div>
-        </div>
-        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.6s" data-wow-duration="1s">
-          <div class="all_teams_sizebox">
-             <div class="all_teams_sizeboxR">
-              <img src="../images/team2.png" alt="workep consulting team">
-              <span class="cloud_im"><img src="../images/cloud.svg" alt="Workpep en la nube"></span>
-            </div>
-            <div class="all_teams_sizeboxL">
-              <h4>Empresas de consultoría</h4>
-              <h5>Mejora la relación con tus clientes cuidando sus necesidades:</h5>
-              <p>Administra mejor los flujos de trabajo de tus clientes y ten claro lo que debes hacer para cumplir con los plazos de los diferentes proyectos.</p>
-            </div>
-
-          </div>
-        </div>
-        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.9s" data-wow-duration="1s">
-          <div class="all_teams_sizebox">
-            <div class="all_teams_sizeboxR">
-              <img src="../images/team3.png" alt="workep development team">
-              <span class="cloud_im"><img src="../images/cloud.svg" alt="Workpe en la nube"></span>
-            </div>
-            <div class="all_teams_sizeboxL">
-              <h4>Casas de desarrollo</h4>
-              <h5>Entrega productos de alta calidad a tiempo:</h5>
-              <p>Gestiona y ejecuta fácilmente los requerimientos de software, desde el diseño hasta la entrega final sin perder ningún plazo.</p>
-            </div>
-
-          </div>
-        </div>
-        <div class="col-lg-6 wow bounceInUp" data-wow-delay="1.2s" data-wow-duration="1s">
-          <div class="all_teams_sizebox">
-            <div class="all_teams_sizeboxR">
-              <img src="../images/team4.png" alt="workep Enterprise team">
-              <span class="cloud_im"><img src="../images/cloud.svg" alt="Workep en la nube"></span>
-            </div>
-            <div class="all_teams_sizeboxL">
-              <h4>Enterprise</h4>
-              <h5>Colaboración entre empresas, y entre diferentes departamentos:</h5>
-              <p>Cada equipo utiliza las herramientas que necesita, de acuerdo con sus proyectos específicos, mientras colabora en proyectos transversales a toda la empresa.</p>
-            </div>
-
-          </div>
-        </div>
-      </div>
-  </div>
-</div>
-
 <div class="marketplace_sec common_gap marketplace_sec_index">
     <div class="container">
       <div class="section_title">
