--- a/es/marketing.html
+++ b/es/marketing.html
@@ -38,7 +38,7 @@
       <div class="row">
         <div class="col-md-5 partner_banner_lft">
           <div class="banner_seclft">
-            <img src="../images/web-hero-marketing.png" alt="Banner de Marketing">
+            <img src="../images/web-hero-marketing-es.png" alt="Banner de Marketing">
            
           </div>
         </div>
@@ -128,7 +128,7 @@
 <br>
 <br>
 </div>
-ooter class="main_footer">
+<f    ooter class="main_footer">
     <div class="foot_top">
       <div class="container">
         <div class="foot_top_row">
