--- a/es/consultoria.html
+++ b/es/consultoria.html
@@ -26,7 +26,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg">
          <div class="logo">
-           <a href="#url"><img src="images/logo.png" alt=""></a>
+           <a href="https://workep.com"><img src="../images/logo.png" alt="Logotipo Workep"></a>
          </div>
          <!--  <div class="ml-auto"><a href="#url" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></div> -->
         </nav>
@@ -39,7 +39,7 @@
       <div class="row">
         <div class="col-md-5 partner_banner_lft">
           <div class="banner_seclft">
-            <img src="../images/consulting-bang-img.png" alt="Consultoria imagen">
+            <img src="../images/web-hero-consulting-Es.png" alt="Consultoria imagen">
            
           </div>
         </div>
