--- a/es/marketing.html
+++ b/es/marketing.html
@@ -25,7 +25,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg">
          <div class="logo">
-           <a href="#url"><img src="../images/logo.png" alt=""></a>
+           <a href="https://workep.com"><img src="../images/logo.png" alt="Logo de Workep"></a>
          </div>
          <!--  <div class="ml-auto"><a href="#url" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></div> -->
         </nav>
